added a new album to my favs

--- a/doqmeat/music/fav-albums/index.html
+++ b/doqmeat/music/fav-albums/index.html
@@ -50,18 +50,24 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 		<div id="lp-container">
 
 
-			<!-- <div class="filterDiv wish float"><img src=""><button title="11100011" class="btn" onclick="popup('asianglow_11100011')"></button></div>
+			<div class="filterDiv cd float">
+				<img src="pics/11100011.jpg" alt="11100011 modal">
+				<button title="11100011" class="btn" onclick="popup('asianglow_11100011')"></button>
+			</div>
 			<div id="asianglow_11100011" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
 					<h2>11100011 - asian glow</h2>
-					<p>my honest to god Album Of The Year for 2025... this was another case of love at first listen</p>
+					<p><img src="pics/11100011.jpg" width="40%" class="r-img"> my honest to god Album Of The Year for 2025... this was another case of love at first listen.</p>
+					<p>i just feel such a raw emotional whenever i listen to this. it sort of that same feeling that <b>kinoue64</b>'s <i>亡霊 (ghost)</i> gives me. it makes me want to scream the songs from the top of my lungs and just let it all out. it gives a very bittersweet feeling. honestly just an amazing album in terms of how it makes me feel.</p>
+					<p>sonically, i really like it too. the songs are mostly shoegaze but there's hints of electronica and dreampop throughout them.</p>
+					<p>i got the CD recently and it came with 3 demo tracks, and my god they just sounded so cool. there was one of them that had such silent hill vibes to it. and i also really appreciate that the CD booklet included english translations of all the songs. i've never seen that on CDs i own so it honestly caught me by surprise.</p>
 
-					<p><b>fav songs:</b> </p>
-
-					<p><b>links:</b> </p>
+					<p><b>fav songs:</b> camel8strike <img src="/!g/pix/staryellow.gif"> dorothee thines <img src="/!g/pix/staryellow.gif"> feel all the time</p>
+					<p><b>links:</b> <a href="https://dbeatdropdeadpowerhead.bandcamp.com/album/11100011" target="_blank">bandcamp</a> / <a href="https://youtu.be/lvPYxK2ly-o?si=F4aw_ohSaw8_0CPo" target="_blank">youtube video</a></p>
+					<p><b>added on:</b> 01.jul.25</p>
 				</div>
-			</div> -->
+			</div>
 
 			<div class="filterDiv wish float"><img src="pics/sepiarecord.jpg"><button title="sepia record" class="btn" onclick="popup('sepiarecord')"></button></div>
 			<div id="sepiarecord" class="modal">
@@ -103,22 +109,22 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				<div class="modal-content">
 					<div class="close"></div>
 					<h2>soul lady - yukika</h2>
-					<p><img src="!g/cds/yukika-soullady.jpg" width="40%" class="r-img">soul lady my beloved <img src="/!g/deco/hellokitty.gif" width="40px"></p>
+					<p><img src="../cds/pics/yukika-soullady.jpg" width="40%" class="r-img">soul lady my beloved <img src="/!g/deco/hellokitty.gif" width="40px"></p>
 					<p>if i had to pin point an album that made me go insane about kpop, it would be this one</p>
 					<p>this was also the first ever album (i keep saying this but in reality this is the 2nd ever album i bought, the first one being loona's 12:00....... but i like to think i bought this one first) that i have ever bought with my hard earned retail money *shivers*</p>
-					<p><img src="!g/cds/yukika-soullady-poster.jpg" width="40%" align="left" style="margin-right:10px;">this album kinda changed me honestly. i still really think this if one of the best, if not THE BEST, kpop albums of all time. from start to finish. from top to bottom. i have never enjoyed an album as much as this one</p>
+					<p><img src="../cds/pics/yukika-soullady-poster.jpg" width="40%" align="left" style="margin-right:10px;">this album kinda changed me honestly. i still really think this if one of the best, if not THE BEST, kpop albums of all time. from start to finish. from top to bottom. i have never enjoyed an album as much as this one</p>
 					<p>i will always hold this album very close to my heart</p>
 
 					<p>i feel like before listening to this album i wasnt so crazy abt music to the point where i would sit down every day to listen to something new, write down my fav songs of whatever i had just listened. i was just an average music enjoyer. but one day i just listened to this and it really just like opened my eyes to how fucking good an album could be.</p>
 					<p>so thank you yukika</p>
-					<p><img src="!g/cds/yukika-soullady-tracks.jpg" width="100%"></p>
+					<p><img src="../cds/pics/yukika-soullady-tracks.jpg" width="100%"></p>
 					<p>not that anyone gaf but fun fact: i think this is the rarest album i have. thank god i bought back in 2020 when there were still some on stock so i had to only spend $20 on it. awesome!!!! i love capitalism!!! no but really i think im lucky to own this before it sold out. i love the physical ver of this album a lot.</p>
-					<p><img title="i love this pic so much wtf are these bunny men lamps" src="!g/cds/yukika-soullady-bunnylamp.jpg" width="100%"></p>
+					<p><img title="i love this pic so much wtf are these bunny men lamps" src="../cds/pics/yukika-soullady-bunnylamp.jpg" width="100%"></p>
 					<p>since the title track is about yukika becoming a seoul (soul) lady, the album inclutions have a theme of traveling and it even came with a yukika passport in which the first page has her info</p>
-					<p><img src="!g/cds/yukika-soullady-passport.jpg" width="50%"><a title="open img in a new tab" href="!g/cds/yukika-soullady-passport-in.jpg" target="_blank"><img src="!g/cds/yukika-soullady-passport-in.jpg" width="50%"></a></p>
+					<p><img src="../cds/pics/yukika-soullady-passport.jpg" width="50%"><a title="open img in a new tab" href="../cds/pics/yukika-soullady-passport-in.jpg" target="_blank"><img src="../cds/pics/yukika-soullady-passport-in.jpg" width="50%"></a></p>
 
 					<p>and the rest of the passport's pages are the song's lyrics and every song has their own unique visa stamp which i find so cute and creative tbh. i love this fake passport</p>
-					<p><img src="!g/cds/yukika-soullady-pitapet.jpg" width="100%"></p>
+					<p><img src="../cds/pics/yukika-soullady-pitapet.jpg" width="100%"></p>
 					<p>i've also made a carrd inspired by the passport! i remember i had so much fun trying to recreate it. sadly i have a new template for my carrd and i didnt save this one but you can still check out through the <a href="https://web.archive.org/web/20230424014841/https://desteny.carrd.co/#a" target="_blank">wayback machine</a> (though the imgs that show up werent the ones i was using). i hope to recreate it on my website someday! maybe for a yukika shrine? hmmmmmm <img src="/!g/pix/cathead.gif"></p>
 
 					<p><b>19.nov.24 update:</b> i did eventually code a template based on the passport inclusion!!! i had so much fun with it. you can check it out <a href="https://doqmeat.github.io/HTML-templates/yukika/" target="_blank" class="outlink">here</a>!</p>
@@ -197,12 +203,12 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				<div class="modal-content">
 					<div class="close"></div>
 					<h2>serotonin II - yeule</h2>
-					<p><img src="!g/cds/yeule-serotonin-cover.jpg" width="40%" class="r-img">listening for the first was such an experience.</p>
+					<p><img src="../cds/pics/yeule-serotonin-cover.jpg" width="40%" class="r-img">listening for the first was such an experience.</p>
 					it's like this album fucking gets me you know. i really like it. it has such a perfect atmosphere. very awesomesauce to me
 					<p>and btw talking about yeule: i have a feeling that their upcoming album, <b>softscars</b> will be making an appereace in this page. just you wait.</p>
 					<p><mark>08.dec.23 edit:</mark> i managed to get this album super cheap on ebay!!! here's some scans from the booklet. i love the imagery</p>
-					<img src="!g/cds/yeule-serotonin-page1.jpg" width="100%" alt="booklet scan from yeule's serotonin II">
-					<img src="!g/cds/yeule-serotonin-page2.jpg" width="100%" alt="booklet scan from yeule's serotonin II">
+					<img src="../cds/pics/yeule-serotonin-page1.jpg" width="100%" alt="booklet scan from yeule's serotonin II">
+					<img src="../cds/pics/yeule-serotonin-page2.jpg" width="100%" alt="booklet scan from yeule's serotonin II">
 					<p><b>fav songs:</b> an angel held me like a child <img src="/!g/pix/staryellow.gif"> pocky boy <img src="/!g/pix/staryellow.gif"> pixel affection <img src="/!g/pix/staryellow.gif"> poison arrow <img src="/!g/pix/staryellow.gif"> reverie</p>
 					<p><b>links:</b> <a href="https://yeule.bandcamp.com/album/serotonin-ii" target="_blank">bandcamp</a> / <a href="https://open.spotify.com/album/5HZHvhX5TpJJD6hTgn0j0D?si=nvA7OWQ4RfODuvE0wqPuDg" target="_blank">spotify</a> / <a href="https://youtu.be/Idpg3fzatnY" target="_blank">youtube</a></p>
 				</div>
@@ -213,7 +219,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				<div class="modal-content">
 					<div class="close"></div>
 					<h2>villain : the end - drippin</h2>
-					<p><img src="!g/cds/drippin-theend.jpg" width="40%" class="r-img">OOOH BOY!!!!!!!! its drippin time</p>
+					<p><img src="../cds/pics/drippin-theend.jpg" width="40%" class="r-img">OOOH BOY!!!!!!!! its drippin time</p>
 					<p>this fucking album. the night this album dropped i was so hyper id even say. insufferable even. it was CRAZYYYY</p>
 					<p>i honestly didnt expect much prior to this album's release and having listened to their <a href="https://youtu.be/Nae2jTwxRp4" target="_blank">highlight medley</a> i didnt think much of it.</p>
 					<p>BUT i did know that i was going to LOVE <i>the one</i> since it was going to have that drum & bass that i love in the chorus. i was so excited for that song specifically</p>
@@ -224,7 +230,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 					<p>and as far as kpop albums go, this was indeed very enjoyable :) i was smiling like crazy listening to this from start to finish. which is something...... so rare when i am listening to kpop albums.</p>
 
 					<p>i also own this album physically. cus again i love it a lot (and this is one of my fav kpop groups at the moment). heres a scan of a page! left is alex and on the right is dongyun. i really like alex' pic</p>
-					<p><img src="!g/cds/drippin-theend2.jpg" width="100%"></p>
+					<p><img src="../cds/pics/drippin-theend2.jpg" width="100%"></p>
 
 					<p><b>fav songs:</b> utopia <img src="/!g/pix/staryellow.gif"> the one <img src="/!g/pix/staryellow.gif"> escape <img src="/!g/pix/staryellow.gif"> home <img src="/!g/pix/staryellow.gif"> silence</p>
 					<p>links: <a href="https://open.spotify.com/album/1Qm9lf5OrCzl3x9trdVMhD?si=hL-GBoCkRkata1Y4it_tLg" target="_blank">spotify</a> / <a href="https://youtube.com/playlist?list=PLxkMP2nnbv4vYzqTDPEMp8KMRnqKbhqxQ" target="_blank">youtube playlist</a></p>
@@ -293,7 +299,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 					<h2>am - arctic monkeys</h2>
 					<p>well. they got my ass <img src="/!g/pix/catsob.gif"> say whatever you want abt this album but this shit went HARD as hell when i was in middle school AND!!!! i do think that it still goes hard. except for a song or two BUT i swear i've had each of these songs on repeat at some point of my life. very crucial album to who i am today (i will say this about every album on this page)</p>
 					<p>probably one of the first albums i fully listened to.... if im being honest</p>
-					<p><img src="!g/cds/arcticmonkeys-am.jpg" width="50%"><img src="!g/cds/arcticmonkeys-am-back.jpg" width="50%"></p>
+					<p><img src="../cds/pics/arcticmonkeys-am.jpg" width="50%"><img src="../cds/pics/arcticmonkeys-am-back.jpg" width="50%"></p>
 					<p>also i dont really care for an album's (cdical) quality when i order stuff but ebay said this was new and this shit was bent like crazy. his ass was not new</p>
 					<p><b>fav songs:</b> one for the road <img src="/!g/pix/staryellow.gif"> snap out of it <img src="/!g/pix/staryellow.gif"> fireside <img src="/!g/pix/staryellow.gif"> knee socks <img src="/!g/pix/staryellow.gif"> why'd you only call me when you're high?</p>
 					<p><b>links:</b> <a href="https://open.spotify.com/album/78bpIziExqiI9qztvNFlQu?si=cN9fMrRESRyelrS3wZTLkw" target="_blank">spotify</a> / <a href="https://youtube.com/playlist?list=PLo6QvHZ4RyGm1je0S02loLS6xV1cQ41yy" target="_blank">youtube playlist</a></p>
@@ -347,10 +353,10 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				<div class="modal-content">
 					<div class="close"></div>
 					<h2>trpp - trpp</h2>
-					<p><img src="!g/cds/trpp-trpp.jpg" width="40%" class="r-img">one of my fav dreampop / shoegaze albums EVERRR.</p>
+					<p><img src="../cds/pics/trpp-trpp.jpg" width="40%" class="r-img">one of my fav dreampop / shoegaze albums EVERRR.</p>
 					<p>and they are also one of my fav bands in those genres as well.</p>
 					<p>this album is just a lot of fun while also being very soft. idk hot to really describe it but i love it a lot.</p>
-					<p><img src="!g/cds/trpp-cd.png" width="40%" align="left" style="margin-right:10px;rotate:20deg;">and i also own the CD!! i got it from their bandcamp and it cost me like $60 bc of the shipping from korea <img src="/!g/pix/annoyed.gif"> but it was so worth it</p>
+					<p><img src="../cds/pics/trpp-cd.png" width="40%" align="left" style="margin-right:10px;rotate:20deg;">and i also own the CD!! i got it from their bandcamp and it cost me like $60 bc of the shipping from korea <img src="/!g/pix/annoyed.gif"> but it was so worth it</p>
 					<p>there has been many times where i just pop this up on my CD player and fall asleep to it. i dream of angels everytime i do it</p>
 					<p><b>fav songs:</b> a joke <img src="/!g/pix/staryellow.gif"> yeah <img src="/!g/pix/staryellow.gif"> pause <img src="/!g/pix/staryellow.gif"> home dance <img src="/!g/pix/staryellow.gif"> liars</p>
 					<p><b>links:</b> <a href="https://trppmusic.bandcamp.com/album/trpp" target="_blank">bandcamp</a> / <a href="https://open.spotify.com/album/4MCb03enJHRY5ovHpoHWQT?si=oyBTezVERnmVTbb1SDTR1Q" target="_blank">spotify</a> / <a href="https://youtu.be/IC4e-FZAAio" target="_blank">youtube</a></p>
@@ -565,7 +571,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				<div class="modal-content">
 					<div class="close"></div>
 					<h2>yume no manimani - siinamota</h2>
-					<p><img src="!g/cds/siinamota-yumenomanimani.jpg" alt="yume no manimani album cover" width="40%" class="r-img">
+					<p><img src="../cds/pics/siinamota-yumenomanimani.jpg" alt="yume no manimani album cover" width="40%" class="r-img">
 						i remember vividly where i was when i first heard this album. this is probably my 2nd fav album of his!!!</p>
 					<p>i love how cohesive it is and the song order and everything just feels SO PERFECT!!!! the interludes are a super nice touch as well, <i>lost & found</i> being one of them while also being one of my favorite siinamota songs! you can read more about my love for this song <a href="/blog/2023/230912-vocaloid#lost" target="_blank">here!</a></p>
 					<p>also the <a title="archive.org scans" href="https://archive.org/details/yume-no-manimani-scans" target="_blank" class="outlink">booklet</a> of this album is so sweet. i love <a title="meisa's website" href="http://hathune39.web.fc2.com/" target="_blank">meisa</a>'s art so much!!
@@ -604,7 +610,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 	<footer>
 		<img src="/!g/deco/iluvmusic.gif" align="left">
 		<img src="/!g/deco/jam.gif" align="right">
-		<b>last updated on 19.nov.24</b>
+		<b>last updated on 01.jul.25</b>
 		<br>
 		album scans in this page have all been scanned by me unless stated otherwise!
 		<br>
