--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -38,7 +38,7 @@
 
       <h4>pages</h4>
       <a href="songs/index.html">fav artists n genres</a>
-      <a href="fav-albums.html">fav albums</a>
+      <a href="fav-albums/index.html">fav albums</a>
       <a href="cds/index.html">CD collection</a>
 
       <h4>mini-pages</h4>
