--- a/doqmeat/music/cds/index.html
+++ b/doqmeat/music/cds/index.html
@@ -50,7 +50,7 @@
 				<div class="hov">
 					<div class="caption">
 						<h3>11100011 - asian glow</h3>
-						<!-- <p><span class="fav"></span></p> -->
+						<p><span class="fav"></span></p>
 						<p>this album was love at first listen. i love it so very very much.</p>
 						<p>the CD version has 3 demo tracks and oh my GOD is the demo track for <i>camel8strike</i> so fucking gorgeous with its violin jesus.......</p>
 						<p><span class="placeholder"></span></p>
@@ -445,7 +445,7 @@
 	<div id="home"><a class="i" title="go back to music page" href="/music"><img src="/!g/deco/cd.gif"></a></div>
 
 	<footer>
-		imgs on this page have been scanned by me unless stated otherwise! <img src="/!g/pix/musicnote1.gif"> <b>last updated on 22.jun.25</b>
+		imgs on this page have been scanned by me unless stated otherwise! <img src="/!g/pix/musicnote1.gif"> <b>last updated on 01.jul.25</b>
 		<br>
 		<b>credit:</b> background is from yukika's soul lady photobook! / <a href="/notebook/links/fonts.html">fonts</a> used: natsuzemi, gaegu, spirit
 		<br>
