--- a/doqmeat/music/fav-albums/index.html
+++ b/doqmeat/music/fav-albums/index.html
@@ -18,7 +18,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>fav albums</title>
-	<link rel="shortcut icon" href="favicon.gif">
+	<link rel="shortcut icon" href="../favicon.gif">
 	<link href="style.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
