new featured music

--- a/doqmeat/music/featured.html
+++ b/doqmeat/music/featured.html
@@ -17,7 +17,8 @@
 </head>
 <style>
 	.date {
-		font-size: 15px;
+		font-size: small;
+		font-style: italic;
 	}
 
 	.t-left {
@@ -66,7 +67,26 @@ iframe2
 -->
 		<details open>
 			<summary>
-				<span class="date">23.may.25 - ? : アプリコット - 水死体は恋したい - ウエンディ / in your languages</span>
+				<span class="date">02.jul.25 - ? : </span>icarus / error ep
+			</summary>
+			<table>
+				<td class="t-left">
+					<p><b>icarus</b> - ARTMS</p>
+					<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/D-w2HwG18vg?si=94-0p97TVcUWaB8G" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					<p>whenever there's silence my brain immediately plays this song. so beautiful to me even though i don't really listen to it that often, but it left a very strong impression on me. <q>HURRICANEEEEEEE</q></p>
+				</td>
+				<td class="t-right">
+					<p><b>error ep</b> - iki3/ewe</p>
+					<iframe style="border: 0; width: 250px; height: 392px;display:block;margin:auto;" src="https://bandcamp.com/EmbeddedPlayer/album=3990044494/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/transparent=true/" seamless><a href="https://ewemusic01.bandcamp.com/album/error-ep">error ep by uki3/ewe</a></iframe>
+					<p>some very fun vocaloid with such great electronic instrumentals for its songs... i need to check out this producer more!!!</p>
+					<p><b>highlights:</b> blood and fish, arazome train</p>
+				</td>
+			</table>
+		</details>
+
+		<details>
+			<summary>
+				<span class="date">23.may.25 - 02.jul.25 :</span> アプリコット - 水死体は恋したい - ウエンディ / in your languages
 			</summary>
 			<table>
 				<td class="t-left">
@@ -88,7 +108,7 @@ iframe2
 		</details>
 		<details>
 			<summary>
-				<span class="date">28.feb.25 - 23.may.25 : love lightside / KIRARA</span>
+				<span class="date">28.feb.25 - 23.may.25 : </span>love lightside / KIRARA
 			</summary>
 			<table>
 				<td class="t-left">
@@ -105,7 +125,7 @@ iframe2
 
 		<details>
 			<summary>
-				<span class="date">08.feb.25 - 28.feb.25 : BAILE INoLVIDABLE / 4study4work4inst Vol.2</span>
+				<span class="date">08.feb.25 - 28.feb.25 : </span>BAILE INoLVIDABLE / 4study4work4inst Vol.2
 			</summary>
 			<table>
 				<td class="t-left">
@@ -122,7 +142,7 @@ iframe2
 
 		<details>
 			<summary>
-				<span class="date">17.jan.25 - 08.feb.25 : lemon melon cookie / 11100011</span>
+				<span class="date">17.jan.25 - 08.feb.25 : </span>lemon melon cookie / 11100011
 			</summary>
 			<table>
 				<td class="t-left">
@@ -139,9 +159,9 @@ iframe2
 
 		<details>
 			<summary>
-				<span class="date">01.jan.25 - 17.jan.25 : worm in the apple / angel interview</span>
+				<span class="date">01.jan.25 - 17.jan.25 : </span>worm in the apple / angel interview
 			</summary>
-			<p>i don't feel like doing a 2024 music recap (<small>or at least not in the way that i've always done them</small>) so i figured i should share my most liked song n album of that year!</p>
+			<p>i don't feel like doing a 2024 music recap (<small>or at least not in the way that i've always done them</small>) so i figured i should share my most liked song n album of 2024!</p>
 			<table>
 				<td class="t-left">
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/rUX9BTtdHdY?si=PJGRWfww9__OJHL9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -156,7 +176,7 @@ iframe2
 
 		<details>
 			<summary>
-				<span class="date">16.nov.24 - 01.jan.25 : DIM / seeyalater stratocaster</span>
+				<span class="date">16.nov.24 - 01.jan.25 : </span>DIM / seeyalater stratocaster
 			</summary>
 			<table>
 				<td class="t-left">
@@ -172,7 +192,7 @@ iframe2
 
 		<details>
 			<summary>
-				<span class="date">19.oct.24 - 16.nov.24 : upward movement (dave owns) / imaginal disk</span>
+				<span class="date">19.oct.24 - 16.nov.24 : </span>upward movement (dave owns) / imaginal disk
 			</summary>
 			<table>
 				<td class="t-left">
@@ -188,7 +208,7 @@ iframe2
 
 		<details>
 			<summary>
-				<span class="date">30.aug.24 - 19.oct.24 : ナイトホリック / sunsound collisions</span>
+				<span class="date">30.aug.24 - 19.oct.24 : </span>ナイトホリック / sunsound collisions
 			</summary>
 			<table>
 				<td class="t-left">
@@ -204,7 +224,7 @@ iframe2
 
 		<details>
 			<summary>
-				<span class="date">27.jul.24 - 30.aug.24 : walls / アダンの風 (adan no kaze)</span>
+				<span class="date">27.jul.24 - 30.aug.24 : </span>walls / アダンの風 (adan no kaze)
 			</summary>
 			<table>
 				<td class="t-left">
@@ -220,7 +240,7 @@ iframe2
 
 		<details>
 			<summary>
-				<span class="date">14.jun.24 - 27.jul.24 : the hitchhiker's guide to the galaxy / sonic rush OST</span>
+				<span class="date">14.jun.24 - 27.jul.24 : </span>the hitchhiker's guide to the galaxy / sonic rush OST
 			</summary>
 			<table>
 				<td class="t-left">
@@ -236,7 +256,7 @@ iframe2
 
 		<details>
 			<summary>
-				<span class="date">12.may.24 - 14.jun.24 : 24 / dreamy drive</span>
+				<span class="date">12.may.24 - 14.jun.24 : </span>24 / dreamy drive
 			</summary>
 			<table>
 				<td class="t-left">
@@ -251,7 +271,7 @@ iframe2
 		</details>
 		<details>
 			<summary>
-				<span class="date">07.apr.24 - 12.may.24 : satisfied / 陽​の​か​け​ら </span>
+				<span class="date">07.apr.24 - 12.may.24 : </span>satisfied / 陽​の​か​け​ら
 			</summary>
 			<table>
 				<td class="t-left">
@@ -267,7 +287,7 @@ iframe2
 
 		<details>
 			<summary>
-				<span class="date">24.feb.24 - 07.apr.24 : aqua / dead girl dubstep EP</span>
+				<span class="date">24.feb.24 - 07.apr.24 : </span>aqua / dead girl dubstep EP
 			</summary>
 			<table>
 				<td class="t-left">
@@ -283,7 +303,7 @@ iframe2
 
 		<details>
 			<summary>
-				<span class="date">01.dec.23 - 24.feb.24 : spell / kokegane no uta</span>
+				<span class="date">01.dec.23 - 24.feb.24 : </span>spell / kokegane no uta
 			</summary>
 			<table>
 				<td class="t-left">
@@ -300,7 +320,7 @@ iframe2
 		</details>
 		<details>
 			<summary>
-				<span class="date">20.oct.23 - 01.dec.23 : internet yamero / おしえてV感覚</span>
+				<span class="date">20.oct.23 - 01.dec.23 : </span>internet yamero / おしえてV感覚
 			</summary>
 			<table>
 				<td class="t-left">
@@ -317,7 +337,7 @@ iframe2
 		</details>
 		<details>
 			<summary>
-				<span class="date">30.sep.23 - 20.oct.23 : breathe / softscars</span>
+				<span class="date">30.sep.23 - 20.oct.23 : </span>breathe / softscars
 			</summary>
 			<table>
 				<td class="t-left">
@@ -332,7 +352,7 @@ iframe2
 		</details>
 		<details id="16aug">
 			<summary>
-				<span class="date">16.aug.23 - 30.sep.23 : dorothy / se bueno</span>
+				<span class="date">16.aug.23 - 30.sep.23 : </span>dorothy / se bueno
 			</summary>
 			<table>
 				<td class="t-left">
@@ -348,7 +368,7 @@ iframe2
 		</details>
 		<details>
 			<summary>
-				<span class="date">27.jul.23 - 16.aug.23 : abon / end of the world</span>
+				<span class="date">27.jul.23 - 16.aug.23 : </span>abon / end of the world
 			</summary>
 			<table>
 				<td class="t-left">
@@ -361,7 +381,7 @@ iframe2
 		</details>
 		<details>
 			<summary>
-				<span class="date">07.jul.23 - 27.jul.23 : outro blue bird / (1)</span>
+				<span class="date">07.jul.23 - 27.jul.23 : </span>outro blue bird / (1)
 			</summary>
 			<table>
 				<td class="t-left">
@@ -374,7 +394,7 @@ iframe2
 		</details>
 		<details>
 			<summary>
-				<span class="date">13.jun.23 - 07.jul.23 : across the spiderverse (start a band) / eye cue rew see (remake)</span>
+				<span class="date">13.jun.23 - 07.jul.23 : </span>across the spiderverse (start a band) / eye cue rew see (remake)
 			</summary>
 			<table>
 				<td class="t-left">
@@ -387,7 +407,7 @@ iframe2
 		</details>
 		<details>
 			<summary>
-				<span class="date">28.may.23 - 13.jun.23 : kontemonia / sherlock</span>
+				<span class="date">28.may.23 - 13.jun.23 : </span>kontemonia / sherlock
 			</summary>
 			<table>
 				<td class="t-left">
@@ -400,7 +420,7 @@ iframe2
 		</details>
 		<details>
 			<summary>
-				<span class="date">14.may.23 - 28.may.23 : i feel love / celeste ost</span>
+				<span class="date">14.may.23 - 28.may.23 : </span>i feel love / celeste ost
 			</summary>
 			<table>
 				<td class="t-left">
@@ -413,7 +433,7 @@ iframe2
 		</details>
 		<details>
 			<summary>
-				<span class="date">1.may.23 - 14.may.23 : 千客万来 / ghost</span>
+				<span class="date">1.may.23 - 14.may.23 : </span>千客万来 / ghost
 			</summary>
 			<table>
 				<td class="t-left">
@@ -426,7 +446,7 @@ iframe2
 		</details>
 		<details>
 			<summary>
-				<span class="date">20.apr.23 - 1.may.23 : stone heart / funeral</span>
+				<span class="date">20.apr.23 - 1.may.23 : </span>stone heart / funeral
 			</summary>
 			<table>
 				<td class="t-left">
@@ -439,7 +459,7 @@ iframe2
 		</details>
 		<details>
 			<summary>
-				<span class="date">12.apr.23 - 20.apr.23 : expose / i am not shinzo abe</span>
+				<span class="date">12.apr.23 - 20.apr.23 : </span>expose / i am not shinzo abe
 			</summary>
 			<table>
 				<td class="t-left">
