--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -67,7 +67,7 @@
 
     <div id="updates" class="box">
       <h3>updates</h3>
-      <p><b>22.jun.25</b> - added <i>11100011</i> to <a href="cds/index.html">cd collection</a></p>
+      <p><b>02.jul.25</b> - new featured music :3 + added <i>11100011</i> to <a href="fav-albums/index.html">fav-albums</a> and to <a href="cds/index.html">cd collection</a></p>
       <p><b>29.may.25</b> - added <i>PMMM: rebellion</i> to <a href="cds/index.html">cd collection</a></p>
       <p><b>23.may.25</b> - new featured and album once again!</p>
       <p><b>28.feb.25</b> - new featured song &amp; album :-)</p>
@@ -87,19 +87,15 @@
     <div id="featured" class="box">
       <h3>featured song &amp; album</h3>
       <div class="song">
-        <p>gonna be highlighting some songs discovered through a friend's radio broadcast section: <i>miku music</i>! i've been a bit obsessed with them this past 2 months.</p>
-        <h4><b>アプリコット (apricot)</b> - iyowa</h4>
-        <iframe width="864" height="486" src="https://www.youtube.com/embed/_uMDEIPgmFI?list=PLJJj3iCewWn3lE58jWAfouzXZ7Nz2zvKF" title="アプリコット / いよわ feat.初音ミク（apricot / iyowa feat.Hatsune Miku）" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <h4><b>水死体は恋したい</b> - LonePi</h4>
-        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/JV--KBO5bgM?si=xjFkNZsdLGLEelNz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <h4><b>ウエンディ</b> - Yoh Kamiyama</h4>
-        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/YvNB8V1IfMY?si=7pmAQQDX1_8MkGwt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <h4><b>icarus</b> - ARTMS</h4>
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/D-w2HwG18vg?si=94-0p97TVcUWaB8G" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <p>whenever there's silence my brain immediately plays this song. so beautiful to me even though i don't really listen to it that often, but it left a very strong impression on me. <q>HURRICANEEEEEEE</q></p>
       </div>
       <div class="lp">
-        <h4><b>in your languages</b> - yuragi</h4>
-        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/HKCSMVJjJyU?si=NkWLiBhnsI11jdCt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <p>a very lovely album to me. really like the heavy feel of it.</p>
-        <p><b>highlights:</b> oppressed</p>
+        <h4><b>error ep</b> - iki3/ewe</h4>
+        <iframe style="border: 0; width: 250px; height: 392px;display:block;margin:auto;" src="https://bandcamp.com/EmbeddedPlayer/album=3990044494/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/transparent=true/" seamless><a href="https://ewemusic01.bandcamp.com/album/error-ep">error ep by uki3/ewe</a></iframe>
+        <p>some very fun vocaloid with such great electronic instrumentals for its songs... i need to check out this producer more!!!</p>
+        <p><b>highlights:</b> blood and fish, arazome train</p>
       </div>
       <hr>
 
@@ -137,7 +133,7 @@
     <footer id="foot" class="box">
       <img src="/collection/internet-graphics/!g/matry.gif" alt="matryoshka gumi" style="margin:15px 5px" align="left">
       <img src="/collection/internet-graphics/!g/orka.gif" alt="matryoshka miku" style="margin:15px 5px" align="right">
-      last updated on 28.jun.25
+      last updated on 02.jul.25
       <br>
       <b>credit:</b>
       bg is a scan from <a title="archive.org img link" href="https://archive.org/details/yume-no-manimani-scans/13-page.png" target="_blank">siinamota's yume no manimani</a> album booklet, art by <a title="meisa's website" href="http://hathune39.web.fc2.com/" target="_blank">meisa</a>
