minor changes to music and css

--- a/doqmeat/music/listening-log/index.html
+++ b/doqmeat/music/listening-log/index.html
@@ -28,29 +28,28 @@
 <body>
 	<div id="frame">
 		<h2>listening logs</h2>
-		<p>ramblings about things that i listen to. entries nowadays are very rare though i still want to make a space for these.</p>
-		<p>full listening logs are available on <a href="https://rateyourmusic.com/~doqmeat" target="_blank" class="outlink">RYM</a> where i make yearly lists of everything i listen to, my initial thoughts, and my fav songs. it's similar to these logs but with less brain power.</p>
+		<p>entries to this page are very rare cus i mostly do quick logs on <a href="https://rateyourmusic.com/~doqmeat" target="_blank" class="outlink">RYM</a> where i make yearly lists of everything i listen to. but this space will continue to exist for whenever i have more thoughts on something <img src="/!g/pix/smileyface.gif"></p>
 		<h3>pages</h3>
 		<h4>2025</h4>
-		<p>RYM <a href="https://rateyourmusic.com/list/doqmeat/2025-log" target="_blank" class="outlink">log</a> / <a href="https://rateyourmusic.com/list/doqmeat/2025-highlights" target="_blank" class="outlink">highlights</a></p>
-		<a href="2025/index.html">music posts</a>
+		<p>RYM: <a href="https://rateyourmusic.com/list/doqmeat/2025-log" target="_blank" class="outlink">log</a> / <a href="https://rateyourmusic.com/list/doqmeat/2025-highlights" target="_blank" class="outlink">highlights</a></p>
+		<a href="2025/index.html" target="_parent">2025 music posts</a>
 		<h4>2024</h4>
-		<p>RYM <a href="https://rateyourmusic.com/list/doqmeat/2024-log" target="_blank" class="outlink">log</a> / <a href="https://rateyourmusic.com/list/doqmeat/2024-highlights" target="_blank" class="outlink">highlights</a></p>
-		<a href="2024/fall.html">fall</a>
-		<a href="2024/summer.html">summer</a>
-		<a href="2024/spring.html">spring</a>
-		<a href="2024/winter.html">winter</a>
+		<p>RYM: <a href="https://rateyourmusic.com/list/doqmeat/2024-log" target="_blank" class="outlink">log</a> / <a href="https://rateyourmusic.com/list/doqmeat/2024-highlights" target="_blank" class="outlink">highlights</a></p>
+		<a href="2024/fall.html" target="_parent">fall</a>
+		<a href="2024/summer.html" target="_parent">summer</a>
+		<a href="2024/spring.html" target="_parent">spring</a>
+		<a href="2024/winter.html" target="_parent">winter</a>
 		<h4>2023</h4>
 		<p>RYM <a href="https://rateyourmusic.com/list/doqmeat/2023-log" target="_blank" class="outlink">log</a></p>
-		<a href="2023/12.html">december</a>
-		<a href="2023/11.html">november</a>
-		<a href="2023/10.html">october</a>
-		<a href="2023/09.html">september</a>
-		<a href="2023/08.html">august</a>
-		<a href="2023/07.html">july</a>
-		<a href="2023/06.html">june</a>
-		<a href="2023/05.html">may</a>
-		<a href="2023/04.html">april</a>
+		<a href="2023/12.html" target="_parent">december</a>
+		<a href="2023/11.html" target="_parent">november</a>
+		<a href="2023/10.html" target="_parent">october</a>
+		<a href="2023/09.html" target="_parent">september</a>
+		<a href="2023/08.html" target="_parent">august</a>
+		<a href="2023/07.html" target="_parent">july</a>
+		<a href="2023/06.html" target="_parent">june</a>
+		<a href="2023/05.html" target="_parent">may</a>
+		<a href="2023/04.html" target="_parent">april</a>
 		<h4>2022</h4>
 		<p>RYM <a href="https://rateyourmusic.com/list/doqmeat/2022-log" target="_blank" class="outlink">log</a></p>
 		<h3>all listening logs</h3>
