--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -52,6 +52,9 @@
 				<!-- new entry! -->
 				<!-- button format: 'img path','alt','desc' -->
 				<article>
+					<p><b>04.jul.25 - 1am</b> the new <a href="https://youtu.be/tAzAhDNdehs?si=9MBXt9As7_gesrcr" target="_blank" class="outlink">chainsaw man reze movie trailer</a> just came out and there's like 3 seconds of angel devil in it and i almost went insane. idk what it is but good lord. he is the most beautiful girl i've ever seen. <button onclick="showPic('!g/250704-angel-1.png','screenshot of angel','i\'m not sure if i wanna be him or be with him or WHAT')">angel-1.png</button> <button onclick="showPic('!g/250704-angel-2.png','screenshot of angel','i\'m not sure if i wanna be him or be with him or WHAT')">angel-2.png</button></p>
+				</article>
+				<article>
 					<p><b>22.jun.25 - 3am</b> haven't been to work for the past week cus i'm with a cold but my god have i gotten a throwback to my unemployment days <img src="/!g/pix/laugh.gif"> been spending most of my days with steve watching <a title="letterboxd profile" href="https://letterboxd.com/doqmeat/" target="_blank" class="outlink">movies</a>, playing either <a title="bloodborne log" href="../vgs/games/bloodborne/index.html">bloodborne</a> or <i>overwatch 2</i>, and going through a <a href="https://javascript.info" target="_blank" class="outlink">javascript online tutorial</a> <small>while having sooo many throwbacks to my <i>intro to programming</i> uni class with C++</small>. i miss having a lot of free time but also... i am okay with how things currently are :3 it's just a bit hard to find that balance of responsibilities and having fun.</p>
 				</article>
 				<article>
