minor change to button wall

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -298,7 +298,7 @@
 			<a title="pixel f2U web materials" href="http://sorahana.ciao.jp/" target="_blank"><img src="!g/sorahana.ciao.jp.gif"></a>
 			<a title="super cute pixels" href="http://whimsical.heartette.net" target="_blank"><img src="!g/whimsical.gif"></a>
 			<a title="site codes and templates" href="https://templaterr.neocities.org" target="_blank"><img src="!g/templaterr1.png"></a>
-			<a title="nuko emoticons!" href="https://nukocities.neocities.org/" target="_blank"><img src="https://nukocities.neocities.org/img/nukocities.gif"></a>
+			<a title="nuko emoticons!" href="https://nukocities.neocities.org/" target="_blank"><img src="!g/nukocities.gif"></a>
 			<a href="https://nukochannel.neocities.org/" title="these little cat emojis and stickers" target="_blank"><img src="!g/nukochannel.gif" alt="nukochannel"></a>
 			<a title="tumblr blog with pixels, cute bgs, etc" href="http://engrampixel.tumblr.com" target="_blank"><img src="http://media.tumblr.com/tumblr_m5106aHKT11qid2nw.gif"></a>
 			<a title="pixels and toybox" href="https://sleepysprout.neocities.org/index1" target="_blank"><img src="!g/sleepysprout.png"></a>
