minor change to button wall

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -289,7 +289,6 @@
 			<a title="old web gifs" href="https://99gifshop.neocities.org" target="_blank"><img src="!g/99gifshop.png"></a>
 			<a title="graphic collection" href="https://tomomi.neocities.org" target="_blank"><img src="!g/tomomi.gif"></a>
 			<a title="another insane graphics collection, has tons of dividers" href="http://jasminnie.weebly.com" target="_blank"><img src="!g/jasminnie.png"></a>
-			<a title="good resources for people who are new to making websites!" href="https://sadgrl.online/" target="_blank"><img src="https://sadgrl.online/assets/images/buttons/sadgrlonline.gif"></a>
 			<a title="kawaiiness.net, cute site w/ resources, pixels, etc" href="https://web.archive.org/web/20231017222637/https://kawaiiness.net/home.php" target="_blank"><img src="!g/kawaiiness.net.gif"></a>
 			<a title="pixel collection" href="https://lostsozai.tumblr.com" target="_blank"><img src="!g/lostsozai.gif"></a>
 			<a title="pixel archive, has tons of favicons" href="https://pixelsafari.neocities.org/" target="_blank"><img src="!g/pixelsafari.gif"></a>
@@ -326,6 +325,8 @@
 		<a title="archived site - cute pixel sets" href="https://web.archive.org/web/20021030170809/http://graphicgard.topcities.com/Hydrangea.html"><img src="/sites/!g/hydrangea-topcities.gif" width="90px"></a>
 		<a title="portuguese blog i found with tons but TONS of gifs, pixels, bgs, etc" href="https://cantinhoencantado.blogs.sapo.pt" target="_blank"><img src="!g/cantinhoencantado.gif" width="90px"></a>
 		<a title="lots of cute old graphics" href="https://web.archive.org/web/20081228002347/http://ritvasgallery.com/files0/fallflowers.htm" target="_blank"><img src="!g/ritvasgallery.gif" alt="ritva's gallery"></a>
+
+		<p><a title="good resources for people who are new to making websites!" href="https://sadgrl.online/" target="_blank">sadgrl.online</a></p>
 
 		<h4 id="fansite">fansites / wikis</h4>
 		<a title="siinamota fansite owned by me!" href="https://siinamota.doqmeat.com" target="_blank"><img src="https://siinamota.doqmeat.com/info/!g/buttons/button1%20(1).png" alt="siinamota fansite"></a>
